<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MobileMedicalActivity!</string>
    <string name="Sync">开始同步</string>
    <string name="sync">同步</string>
    <string name="saving">正在保存</string>
    <string name="app_name">MobileMedical</string>
    <string name="CreatID">创建用户ID</string>
    <string name="viewUserInfo">浏览用户信息</string>
    <string name="temperature">体温</string>
    <string name="electrocardiogrammeter">心电图</string>
    <string name="heartBeat">心率</string>
    <string name="bloodPresure">血压</string>
    <string name="bloodSuger">血糖</string>
    <string name="stethoscope">听诊器</string>
    <string name="pulmonaryventilation">肺通</string>
    <string name="currentSensor">当前可用的传感器</string>
    <string name="singMeasure">选中要测量的传感器，开始单次测量</string>
    <string name="multiMeasure">选中要测量的传感器，开始多次测量</string>
    <string name="syncResult">与移动医疗网关中的数据进行同步</string>
    <string name="setting">设置</string>
    <string name="patient1">小明</string>
    <string name="timeoflasttest">最后一次测量时间</string>
    <string name="bloodOx">血氧</string>
    <string name="start">开   始</string>
    <string name="stop">停   止</string>
    <string name="testString">test</string>
    <string name="xinlvbuqi">心律不齐</string>
    <string name="lastDiag">上次诊断</string>
    <string name="hospital">海淀医院</string>
    <string name="yibao">医保</string>
    <string name="fileNum">档案</string>
    <string name="testFilenum">17-8-4</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="age">年龄</string>
    <string name="testAge">54</string>
    <string name="anqi">安琪</string>
    <string name="router">网   关</string>
    <string name="statistics">统   计</string>
    <string name="data">数   据</string>
    <string name="bloodoxspo">SpO2</string>
    <string name="spovalue">07</string>
    <string name="bloodpressSP">SP</string>
    <string name="bloodpressDP">DP</string>
    <string name="bloodpressAC">AC</string>
    <string name="bloodpressDC">DC</string>
    <string name="bloodoxHeartRate">脉搏</string>
    <string name="testHRValue">80</string>
    <string name="bt_state_not_connected">没有连接</string>
    <string name="bt_state_connecting">正在连接....</string>
    <string name="bt_state_connected">已连接</string>
    <string name="bt_state_searching">正在搜索....</string>
    <string name="bt_state_pairing">正在配对....</string>
    <string name="bt_state_searched">搜索完成</string>
    <string name="bt_searching_device">搜索设备</string>
    <string name="bt_not_enabled_leaving">无法打开蓝牙</string>
    <string name="bt_state_none_paired">无配对</string>
    <string name="bt_title_touch_to_paired">触摸可配对</string>
    <string name="bt_title_paired_device">已配对的设备</string>
    <string name="bt_title_connected_device">已连接的网关</string>
    <string name="bt_title_connected_device_name">网关名称</string>
    <string name="bt_title_connected_device_name_string">BTM0604C2P</string>
    <string name="bt_title_aviable_device">可用设备</string>
    <string name="bt_title_connected_notes">已连接的节点</string>
    <string name="bt_title_no_device">未发现蓝牙设备</string>
    <string name="bt_secure_connect">连接设备-安全</string>
    <string name="bt_insecure_connect">连接设备-不安全</string>
    <string name="bt_discoverable">可发现</string>
    <string name="SPO2_axis_title">SPO2</string>
    <string name="pulse_axis_title">脉搏</string>
    <string name="egc_axis_title">心电图</string>
    <string name="body_temp_line_axis_title">体温</string>
    <string name="max">最大值</string>
    <string name="min">最小值</string>
    <string name="average">平均值</string>
    <string name="oneHour">1小时</string>
    <string name="oneDay">1天</string>
    <string name="oneWeek">1 周</string>
    <string name="oneMonth">1个月</string>
    <string name="exit">退出</string>
    <string name="about">关于</string>
    <string name="bt_back">返回</string>
    <string name="currentBodyTemp">当前体温</string>
    <string name="bodyTempUnit">℃</string>
    <string name="baseBodyTemp">基础体温</string>
    <string name="nullValue">－－</string>
    <string name="morningSetting">早晨时间段</string>
    <string name="from">由</string>
    <string name="to">至</string>
    <string name="fromTime">由</string>
    <string name="toTime">至</string>
    <string name="noon">中午时间段</string>
    <string name="evening">晚上时间段 ：</string>
    <string name="night">夜间时间段 ：</string>
    <string name="analysis">数据分析范围 ：</string>
    <string name="readMeasDataFile">读取数据文件</string>
    <string name="measDataFileSource">从SD卡</string>
    <string name="header_setting_title">系统设置</string>
    <string name="router_settings_title">网关设置</string>
    <string name="time_settings_title">时间设置</string>
    <string name="other_settings_title">其他设置</string>
    <string name="router_details_title">网关设置</string>
    <string name="connected_router">已连接的网关</string>
    <string name="router_name_sample">BCM000000</string>
    <string name="lock_settings_picker_title">Choose screen lock</string>
    <string name="gw_info">网关信息</string>
    <string name="sensor_info">节点信息</string>
    <string name="gwinfo_mobmedgwid">网关ID</string>
    <string name="gwinfo_systemversion">系统版本</string>
    <string name="gwinfo_memorysize">内存大小</string>
    <string name="gwinfo_sdcapacity">SD卡大小</string>
    <string name="gwinfo_remainingpower">剩余电量</string>
    <string name="gwinfo_systemload">系统负载</string>
    <string name="gwinfo_mobmedgwstate">网关状态</string>
    <string name="gwinfo_wirelessdevice">无线设备</string>
    <string name="gwinfo_wirelessdevicemac">无线MAC</string>
    <string name="gwinfo_wirelessdeviceprotvers">无线协议版本</string>
    <string name="gwinfo_maximumsensornumber">最大连接节点个数</string>
    <string name="gwinfo_connectedsensornumber">已连接节点个数</string>
    <string name="sensorinfo_sensortyp">节点类型</string>
    <string name="sensorinfo_sensorid">节点ID</string>
    <string name="sensorinfo_systemversion">节点版本</string>
    <string name="sensorinfo_remainingpower">剩余电量</string>
    <string name="sensorinfo_systemload">系统负载</string>
    <string name="sensorinfo_sensorstate">节点状态</string>
    <string name="sensorinfo_wirelessdevice">无线设备</string>
    <string name="sensorinfo_wirelessdevicemac">无线MAC</string>
    <string name="sensorinfo_wirelessdeviceprotvers">无线协议版本</string>
    <string name="patientslist">患者列表</string>
    <string name="readData">读取数据</string>
    <string name="bloodPressConfigParm">血压配置参数</string>
    <string name="bloodPressConfigParmMessage">配置血压控制参数，范围1~255</string>
    <string name="bloodPressDisplayFrameLen">血压波形显示帧长度</string>
    <string name="bloodPressDisplayFrameLenMessage">配置血压波形显示帧长度，范围1~50秒</string>
    <string name="bloodOxygenDisplayFrameLen">血氧波形显示帧长度</string>
    <string name="bloodOxygenDisplayFrameLenMessage">配置血氧波形显示帧长度，范围1~50秒</string>
    <string name="ECGDisplayFrameLen">心电波形显示帧长度</string>
    <string name="ECGDisplayFrameLenMessage">配置心电波形显示帧长度，范围1~50秒</string>
    <string name="pulmonaryDisplayFrameLen">肺通波形显示帧长度</string>
    <string name="pulmonaryDisplayFrameLenMessage">配置肺通波形显示帧长度，范围1~50秒</string>
    <string name="sendCommand">发送命令</string>
    <string name="sendCommandMessage">发送控制，配置命令</string>
    <string name="clearDataBase">清除数据</string>
    <string name="clearDataBaseMessage">清楚存储的测量结果数据</string>
    <string name="TimeSet">配置定时时间</string>
    <string name="PulmonaryVentilation">肺通值</string>
    <string name="PulmonaryVentilationVal">00</string>
    <string name="ECGHeartRate">心率</string>
    <string name="ECGHeartRateValue">00</string>
    <string name="bodyTempCal_title">温度计校准</string>
    <string name="bodyTempCalMessage">进行温度计校准</string>
    <string name="bodyTempEff">计算校准参数</string>
    <string name="doBodyTemp">校准</string>
    <string name="calcBodyTempEff">计算校准参数</string>
    <string name="sendBodyTempEff">发送校准参数</string>
    <string name="clearBodyTempData">清除</string>
    <string name="clearAllBodyTempData">清除全部校准数据</string>
    <string name="clearAllBodyTempDataMessage">将删除全部收到的温度校准数据</string>
    <string name="bodyTempCalCoeffA">校准参数A：</string>
    <string name="bodyTempCalCoeffB">校准参数B：</string>
    <string name="bodyTempCalCoeffC">校准参数C：</string>
    <string name="coldEndTemp">冷端温度（°C）</string>
    <string name="heatEndTemp">热端温度（°C）</string>
    <string name="referTemp">参考温度（°C）</string>
    <string name="waveformDisplayFrameLen">测量波形显示长度</string>
    <string name="calibration">校准</string>
    <string name="zeroValue">0.0</string>
    <string name="patientInfo">患者信息</string>
    <string name="patientContactInfo">联系人信息</string>
    <string name="signsMeas">体征测量</string>
    <string name="history">历史测量</string>
    <string name="doctorInfo">医生信息</string>
    <string name="patientRecordInfo">诊断记录</string>
    <string name="TimeBeep">定时声音提醒</string>
    <string name="SetDate">设置日期</string>
    <string name="SetTime">设置时间</string>
    <string name="SetSecond">设置秒</string>
    <string name="SetBeepSeqLen">设置声音提醒响铃次数</string>
    <string name="SetBeepSeqGapMinutes">设置声音提醒响铃时间</string>
    <string name="SendTimingTitle">发送定时消息</string>
    <string name="SendTimingMessage">发送设置的定时消息</string>
    <string name="TimePeriod">设置定时周期</string>
    <string name="TimePeriodMessage">设置定时周期间隔：每年；每月；每天</string>
    <string name="DoctorInfoName">姓名</string>
    <string name="DoctorInfoId">编号</string>
    <string name="DoctorInfoWork">单位</string>
    <string name="DoctorInfoRoom">科室</string>
    <string name="DoctorInfoLevel">级别</string>
    <string name="DoctorInfoTele">电话</string>
    <string name="DoctorInfoEmail">email邮箱</string>
    <string name="DoctorInfoIdNotChange">编号不能修改</string>
    <string name="doctor">医生</string>
    <string name="hint_already_in_db">没有找到文件或者测量数据已全部读取到数据库中</string>
    <string name="hint_no_sd_card">没有发现sd卡</string>
     <string name="hint_quit">想要退出？</string>
     <string name="cancel">取消</string>
     <string name="sure">确定</string>
  <string name="idno_not_change">身份证号码不能修改</string>
<string name="no_type">未识别测量类型</string>
    <string name="title_activity_file_transmission">fileTransmission</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ai_charts_display">aiChartsDisplay</string>
    <string name="title_activity_ai_charts_display4blood_pressure">aiChartsDisplay4bloodPressure
    </string>
    <string name="title_activity_ai_charts_display4blood_ox">aiChartsDisplay4bloodOx</string>
</resources>