<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill"
    android:layout_marginLeft="1dp"
    android:layout_marginTop="1dp" >


    <LinearLayout
        android:id="@+id/relativeLayoutParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        







     <RelativeLayout
         android:id="@+id/relativeLayout1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_weight="0.01" >

         <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_launcher" />


        <TextView
            android:id="@+id/patientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/imageButton1"
            android:text="@string/patient1"
             />





        <Button
            android:id="@+id/buttonRouter"
            android:layout_width="wrap_content"
            android:layout_height="25dp"

            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="100dp"
            android:text="@string/router"
            android:textSize="5sp" />





        <Button
            android:id="@+id/buttonStatistics"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="30dp"
            android:text="@string/statistics"
            android:textSize="5sp" />

        <TextView
            android:id="@+id/textViewLastDiag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/patientName"
            android:layout_below="@id/patientName"
            
            android:text="@string/lastDiag" />




        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignLeft="@+id/buttonRouter"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/buttonRouter"
            android:text="@string/start"
            android:textSize="5sp" />




        <Button
            android:id="@+id/buttonStop"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignLeft="@+id/buttonStatistics"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/buttonStatistics"
            android:text="@string/stop"
            android:textSize="5sp" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textViewLastDiag"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/textViewLastDiag"
            android:text="@string/xinlvbuqi" />




        <TextView
            android:id="@+id/textViewHospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/buttonStart"
            android:layout_alignLeft="@+id/textViewLastDiag"
            android:text="@string/hospital" />




        <TextView
            android:id="@+id/textViewYibao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/yibao" />




        <TextView
            android:id="@+id/textViewFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="21dp"
            android:layout_toRightOf="@+id/textViewYibao"
            android:text="@string/fileNum" />




        <TextView
            android:id="@+id/textViewFileNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="23dp"
            android:layout_toRightOf="@+id/textViewFile"
            android:text="@string/testFilenum" />




        <TextView
            android:id="@+id/textViewGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewResult"
            android:layout_alignBottom="@+id/textViewResult"
            android:layout_alignLeft="@+id/textViewFile"
            android:text="@string/gender" />




        <TextView
            android:id="@+id/textViewMaleFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textViewGender"
            android:layout_alignLeft="@+id/textViewFileNum"
            android:text="@string/male" />




        <TextView
            android:id="@+id/textViewAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewHospital"
            android:layout_alignBottom="@+id/textViewHospital"
            android:layout_alignLeft="@+id/textViewGender"
            android:text="@string/age" />




        <TextView
            android:id="@+id/textViewAgeNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textViewAge"
            android:layout_alignLeft="@+id/textViewMaleFemale"
            android:text="@string/testAge" />

    </RelativeLayout>    



    <RelativeLayout
        android:id="@+id/relativeLayoutTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >





         <TabWidget
             android:id="@android:id/tabs"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal" />

    <FrameLayout
        android:id="@android:id/tabcontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/tabs"
        android:layout_marginTop="20dp"
        android:layout_weight="1" >
  
      </FrameLayout>  
   </RelativeLayout>   

</LinearLayout>
 
    


</TabHost>