<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

	<TextView
	    android:id="@+id/parmAName"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:layout_marginRight="100dp"
	    android:text="@string/coldEndTemp"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textColor="#fff" />

	<TextView
	    android:id="@+id/parmBName"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:layout_marginRight="100dp"
	    android:text="@string/heatEndTemp"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textColor="#fff" />

	<TextView
	    android:id="@+id/parmCName"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:layout_marginRight="50dp"
	    android:text="@string/referTemp"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textColor="#fff" />

</LinearLayout>