<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayoutBloodOxText"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2.5"
        >

        <TextView
            android:id="@+id/textViewBloodOxSPO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="180dp"
            android:layout_weight="0.1"
            android:textSize="30sp"
            android:text="@string/bloodoxspo" />








        <TextView
            android:id="@+id/textViewSPOValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            
            android:layout_weight="0.4"
            android:textSize="30sp"
            android:text="@string/spovalue" />







        <TextView
            android:id="@+id/textViewHeartRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.1"
            android:textSize="30sp"
            android:text="@string/bloodoxHeartRate" />





        <TextView
            android:id="@+id/textViewHeartRateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.4"
            android:textSize="30sp"
            android:text="@string/testHRValue" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutBloodOxChart"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.8" >

          <com.artfulbits.aiCharts.ChartView
              android:id="@+id/chartView"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" />

    </LinearLayout>

</LinearLayout>